data/processor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: processor
  namespace: data
spec:
  replicas: 1
  selector:
    matchLabels:
      app: processor
  template:
    metadata:
      labels:
        app: processor
    spec:
      containers:
      - name: processor
        image: lauravrv/processor-app:v1
