data/zipkin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zipkin-service
  namespace: data
spec:
  selector:
    app: zipkin
  ports:
  - port: 9411
    targetPort: 9411
