data/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: data
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-redis
  namespace: data
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: todos
    ports:
    - port: 6379
  - from:
    - podSelector:
        matchLabels:
          app: processor
    ports:
    - port: 6379
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-zipkin
  namespace: data
spec:
  podSelector:
    matchLabels:
      app: zipkin
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: auth
    ports:
    - port: 9411
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: todos
    ports:
    - port: 9411
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-processor-egress
  namespace: data
spec:
  podSelector:
    matchLabels:
      app: processor
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: redis
    ports:
    - port: 6379
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - port: 53
      protocol: UDP
